--- a/build.xml
+++ b/build.xml
@@ -415,7 +415,7 @@
             <application 
             	mainclass="${mainclass}" 
             	jar="${jarpath}"
-            	arguments="$$$$plugins"
+            	arguments="$$$$plugins $$$$project"
             />
         </jnlpwar>
 	</target>
