add home page and offline allowed to service jnlp file, update ant jnlp task
git-svn-id: http://fs:8000/svn/DDG@4471 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -379,11 +379,13 @@
             tofile="${warpath}"
             title="VaryLab"
             vendor="${vendor}"
+			homepage="http://www.varylab.com"
             pack200="false"
             signStorepass="${signStorepass}"
             signAlias="${signAlias}"
 			keystore="${keystore}"
 			attemptjavadetection="true"
+			offlineallowed="true"
 		>
             <description>
             	Varylab is a software developed at Berlin Institute of 
