icon update, no offline allowed as web start
git-svn-id: http://fs:8000/svn/DDG@4480 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -385,7 +385,7 @@
             signAlias="${signAlias}"
 			keystore="${keystore}"
 			attemptjavadetection="true"
-			offlineallowed="true"
+			offlineallowed="false"
 		>
             <description>
             	Varylab is a software developed at Berlin Institute of 
