write default properties file on startup
git-svn-id: http://fs:8000/svn/DDG@4493 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -188,6 +188,9 @@
 				<exclude name="**/SplashImageHook.java"/>
 				<exclude name="**/ImageHook.java"/>
 			</fileset>
+			<fileset dir="${src}">
+				<include name="**/*.xml"/>
+			</fileset>
 		</copy>
 	</target>
 
