--- a/build.xml
+++ b/build.xml
@@ -59,6 +59,7 @@
 		<pathelement location="${lib}/conformallab/batik-util.jar"/>
 		<pathelement location="${lib}/conformallab/itext-xtra-5.1.3.jar"/>
 		<pathelement location="${lib}/conformallab/itextpdf-5.1.3.jar"/>
+		<pathelement location="${lib}/conformallab/MTJOptimization.jar"/>
 	</path>
 
 	<path id="jfreechart.libraryclasspath">
@@ -84,6 +85,7 @@
 
 	<path id="jtem.libraryclasspath">
 		<pathelement location="${lib}/jtem/beans.jar"/>
+		<pathelement location="${lib}/jtem/blas.jar"/>
 		<pathelement location="${lib}/jtem/ellipticFunctions.jar"/>
 		<pathelement location="${lib}/jtem/halfedge.jar"/>
 		<pathelement location="${lib}/jtem/halfedgetools.jar"/>
@@ -95,6 +97,7 @@
 		<pathelement location="${lib}/jtem/modelling.jar"/>
 		<pathelement location="${lib}/jtem/numericalMethods.jar"/>
 		<pathelement location="${lib}/jtem/projgeom.jar"/>
+		<pathelement location="${lib}/jtem/riemann.jar"/>
 	</path>
 
 	<path id="substance.libraryclasspath">
