--- a/build.xml
+++ b/build.xml
@@ -416,6 +416,7 @@
 			</lib>
 			<nativelib os="Windows" arch="i586" dir="native/win32/" includes="jpetsctao.dll"/>
 			<nativelib os="Windows" arch="amd64" dir="native/win64/" includes="jpetsctao.dll"/>	
+			<nativelib os="Linux" arch="i386" dir="native/linux32/" includes="libjpetsctao.so"/>
 			<nativelib os="Linux" arch="i586" dir="native/linux32/" includes="libjpetsctao.so"/>
 			<nativelib os="Linux" arch="amd64" dir="native/linux64/" includes="libjpetsctao.so"/>
 			<nativelib os="Linux" arch="x86_64" dir="native/linux64/" includes="libjpetsctao.so"/>
