--- a/.classpath
+++ b/.classpath
@@ -54,5 +54,6 @@
 	<classpathentry kind="lib" path="lib/misc/MathematicaPlugin.jar"/>
 	<classpathentry kind="lib" path="lib/misc/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/MTJOptimization.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
