--- a/build.xml
+++ b/build.xml
@@ -414,7 +414,7 @@
             <application 
             	mainclass="${mainclass}" 
             	jar="${jarpath}"
-            	arguments="$$$$plugins $$$$project"
+            	arguments="$$$$plugins $$$$project $$$$models"
             />
         </jnlpwar>
 	</target>
