drop-in plug-in loading fixed, jrworkspace update
git-svn-id: http://fs:8000/svn/DDG@4710 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -53,7 +53,7 @@
 	<classpathentry kind="lib" path="lib/misc/JLink.jar"/>
 	<classpathentry kind="lib" path="lib/misc/MathematicaPlugin.jar"/>
 	<classpathentry kind="lib" path="lib/misc/mtj.jar"/>
-	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar" sourcepath="/jrworkspace"/>
 	<classpathentry kind="lib" path="lib/conformallab/MTJOptimization.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
