fix plug-in download and loading
git-svn-id: http://fs:8000/svn/DDG@4722 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -414,7 +414,7 @@
             <application 
             	mainclass="${mainclass}" 
             	jar="${jarpath}"
-            	arguments="$$$$plugins $$$$project $$$$models"
+            	arguments="$$$$plugins $$$$project $$$$models $$$$jarplugins"
             />
         </jnlpwar>
 	</target>
