log severe messages by default
git-svn-id: http://fs:8000/svn/DDG@5001 986badc2-2932-0410-96f0-8e0caa59e138

--- a/logging.properties
+++ b/logging.properties
@@ -2,7 +2,7 @@
 handlers= java.util.logging.ConsoleHandler
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
-.level = OFF
+.level = SEVERE
 
 java.util.logging.FileHandler.pattern = log/java%u.log
 java.util.logging.FileHandler.limit = 50000
