* Progress on lattice remesher problems * added Mockito library for JUnit tests
NEW - # 50: lattice remesher has problems 
http://trac.varylab.com/ticket/50

git-svn-id: http://fs:8000/svn/DDG@5002 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -11,9 +11,9 @@
 	<classpathentry kind="lib" path="lib/substance/substance-6.0.jar" sourcepath="/Substance"/>
 	<classpathentry kind="lib" path="lib/substance/trident-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar" sourcepath="/jTao"/>
-	<classpathentry kind="lib" path="lib/jtem/halfedge.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/halfedge.jar" sourcepath="/halfedge"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar" sourcepath="/halfedgetools"/>
-	<classpathentry kind="lib" path="lib/jreality/jReality.jar">
+	<classpathentry kind="lib" path="lib/jreality/jReality.jar" sourcepath="/jreality">
 		<attributes>
 			<attribute name="javadoc_location" value="http://www3.math.tu-berlin.de/jreality/api/"/>
 		</attributes>
@@ -60,5 +60,6 @@
 	<classpathentry kind="lib" path="lib/misc/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar" sourcepath="/jrworkspace"/>
 	<classpathentry kind="lib" path="lib/conformallab/MTJOptimization.jar"/>
+	<classpathentry kind="lib" path="lib/junit/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
