custom varylab logging handler and formatter
git-svn-id: http://fs:8000/svn/DDG@5021 986badc2-2932-0410-96f0-8e0caa59e138

--- a/logging.properties
+++ b/logging.properties
@@ -1,5 +1,5 @@
-#default logging properties, override in a file logcustom.properties
-handlers= java.util.logging.ConsoleHandler
+handlers = de.varylab.varylab.logging.StdoutConsoleHandler
+#handlers= java.util.logging.ConsoleHandler
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 .level = SEVERE
@@ -10,4 +10,8 @@ java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
 
 java.util.logging.ConsoleHandler.level = ALL
-java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+#java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.ConsoleHandler.formatter = de.varylab.varylab.logging.TrivialLogFormatter
+
+de.varylab.varylab.logging.StdoutConsoleHandler.level = ALL
+de.varylab.varylab.logging.StdoutConsoleHandler.formatter = de.varylab.varylab.logging.TrivialLogFormatter
