update ant-jnlp-war task to do manifest updates for the webstart
git-svn-id: http://fs:8000/svn/DDG@5112 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -394,11 +394,16 @@
             signAlias="${signAlias}"
 			keystore="${keystore}"
 			attemptjavadetection="true"
-			offlineallowed="false"
+			offlineallowed="true"
 		>
             <description>Varylab - Discrete Surface Optimization</description>
             <description kind="short">Varylab - Discrete Surface Optimization</description>
             <j2se minVersion="1.6" args="-Xmx512M"/>
+        	<manifest>
+        		<attribute name="Permissions" value="all-permissions"/>
+        		<attribute name="Codebase" value="http://my.varylab.com"/>
+        		<attribute name="Application-Name" value="VaryLab"/>
+        	</manifest>
             <lib dir="." includes="${manifest.classpath}"/>
 			<lib dir="${lib}/jogamp">
 				<include name="*.jar"/>
