manifest updates do not work yet, need to rework the deployment mechanism
git-svn-id: http://fs:8000/svn/DDG@5113 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -399,11 +399,11 @@
             <description>Varylab - Discrete Surface Optimization</description>
             <description kind="short">Varylab - Discrete Surface Optimization</description>
             <j2se minVersion="1.6" args="-Xmx512M"/>
-        	<manifest>
+        	<!--manifest>
         		<attribute name="Permissions" value="all-permissions"/>
         		<attribute name="Codebase" value="http://my.varylab.com"/>
         		<attribute name="Application-Name" value="VaryLab"/>
-        	</manifest>
+        	</manifest-->
             <lib dir="." includes="${manifest.classpath}"/>
 			<lib dir="${lib}/jogamp">
 				<include name="*.jar"/>
