update conformal lab and halfedge tools. add discrete group to lib. add blas and riemann to classpath.
git-svn-id: http://fs:8000/svn/DDG@5120 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,7 @@
 	<path id="jtem.libraryclasspath">
 		<pathelement location="${lib}/jtem/beans.jar"/>
 		<pathelement location="${lib}/jtem/blas.jar"/>
+		<pathelement location="${lib}/jtem/discretegroup.jar"/>
 		<pathelement location="${lib}/jtem/ellipticFunctions.jar"/>
 		<pathelement location="${lib}/jtem/halfedge.jar"/>
 		<pathelement location="${lib}/jtem/halfedgetools.jar"/>
