--- a/.classpath
+++ b/.classpath
@@ -61,5 +61,8 @@
 	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar" sourcepath="/jrworkspace"/>
 	<classpathentry kind="lib" path="lib/conformallab/MTJOptimization.jar"/>
 	<classpathentry kind="lib" path="lib/junit/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/discretegroup.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/blas.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/riemann.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
