add 3dconnexion support, update jreality
git-svn-id: http://fs:8000/svn/DDG@5182 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -64,5 +64,6 @@
 	<classpathentry kind="lib" path="lib/jtem/discretegroup.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/blas.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/riemann.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/hidapi-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
