--- a/.classpath
+++ b/.classpath
@@ -7,8 +7,6 @@
 	<classpathentry kind="src" path="src-resource"/>
 	<classpathentry kind="src" path="src-modules"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="lib/substance/substance-6.0.jar" sourcepath="/Substance"/>
-	<classpathentry kind="lib" path="lib/substance/trident-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar" sourcepath="/jTao"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedge.jar" sourcepath="/halfedge"/>
 	<classpathentry kind="lib" path="lib/jreality/jReality.jar" sourcepath="/jreality">
@@ -65,5 +63,9 @@
 	<classpathentry kind="lib" path="lib/jreality/hidapi-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/misc/antlr-3.4-complete.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar"/>
+	<classpathentry kind="lib" path="lib/substance/substance-7.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/substance/trident-7.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/substance/laf-widget-7.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/substance/laf-plugin-7.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
