fixed some more tests
git-svn-id: http://fs:8000/svn/DDG@5287 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -223,7 +223,7 @@
 			<classpath refid="junit.libraryclasspath"/>
 		</javac>
 		<copy todir="${build-test}">
-			<fileset dir="${src-test}" includes="**/testSegments.xml"/>
+			<fileset dir="${src-test}" includes="**/*.xml"/>
 			<fileset dir="${src-test}" includes="**/logging.properties"></fileset>
 		</copy>
 		<junit printsummary="yes" haltonfailure="yes">
