--- a/logging.properties
+++ b/logging.properties
@@ -3,6 +3,7 @@ handlers = de.varylab.varylab.logging.StdoutConsoleHandler
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 .level = SEVERE
+de.varylab.level = WARNING
 
 java.util.logging.FileHandler.pattern = log/java%u.log
 java.util.logging.FileHandler.limit = 50000
