Integral curve user interface implemeted
git-svn-id: http://fs:8000/svn/DDG@5300 986badc2-2932-0410-96f0-8e0caa59e138

--- a/logging.properties
+++ b/logging.properties
@@ -3,7 +3,8 @@ handlers = de.varylab.varylab.logging.StdoutConsoleHandler
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 .level = SEVERE
-de.varylab.level = WARNING
+de.varylab.level = ALL
+#SEVERE
 
 java.util.logging.FileHandler.pattern = log/java%u.log
 java.util.logging.FileHandler.limit = 50000
