added first version of jOpenNurbs
git-svn-id: http://fs:8000/svn/DDG@5307 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -67,5 +67,6 @@
 	<classpathentry kind="lib" path="lib/substance/laf-widget-7.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/substance/laf-plugin-7.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="lib/jopennurbs/jopennurbs.jar" sourcepath="/jOpenNurbs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
