--- a/.classpath
+++ b/.classpath
@@ -61,7 +61,7 @@
 	<classpathentry kind="lib" path="lib/jtem/riemann.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/hidapi-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/misc/antlr-3.4-complete.jar"/>
-	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar" sourcepath="/halfedgetools"/>
 	<classpathentry kind="lib" path="lib/substance/substance-7.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/substance/trident-7.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/substance/laf-widget-7.2.1.jar"/>
