--- a/.classpath
+++ b/.classpath
@@ -30,8 +30,6 @@
 	<classpathentry kind="lib" path="lib/jtem/java2d.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/java2dx.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/modelling.jar"/>
-	<classpathentry kind="lib" path="lib/xstream/xpp3-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="lib/xstream/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/colorpicker.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/janino.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jterm.jar"/>
@@ -68,5 +66,7 @@
 	<classpathentry kind="lib" path="lib/substance/laf-plugin-7.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/jopennurbs/jopennurbs.jar" sourcepath="/jOpenNurbs"/>
+	<classpathentry kind="lib" path="lib/xstream/xpp3.jar"/>
+	<classpathentry kind="lib" path="lib/xstream/xstream.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
