--- a/build.xml
+++ b/build.xml
@@ -110,8 +110,8 @@
 	</path>
 
 	<path id="xstream.libraryclasspath">
-		<pathelement location="${lib}/xstream/xstream-1.3.1.jar"/>
-		<pathelement location="${lib}/xstream/xpp3-1.1.4c.jar"/>
+		<pathelement location="${lib}/xstream/xstream.jar"/>
+		<pathelement location="${lib}/xstream/xpp3.jar"/>
 	</path>
 
 	<path id="misc.libraryclasspath">
