--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="de/varylab/varylab/plugin/scripting/PythonConsole.java|de/varylab/varylab/plugin/nurbs/test.java" kind="src" path="src"/>
+	<classpathentry excluding="de/varylab/varylab/plugin/scripting/PythonConsole.java|de/varylab/varylab/plugin/nurbs/test.java|de/varylab/varylab/plugin/io/OBJExportPlugin.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="src" path="src-python"/>
 	<classpathentry kind="src" path="src-website"/>
