remove failing getPlugin calls in remeshing plugin, small service fixes
git-svn-id: http://fs:8000/svn/DDG@5435 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -383,6 +383,9 @@
 				<attribute name="Implementation-Title" value="VaryLab[Service]"/>
 				<attribute name="Implementation-Version" value="${version}"/>
 				<attribute name="Implementation-URL" value="http://www.varylab.com/"/>
+				<attribute name="Permissions" value="all-permissions"/>
+        		<attribute name="Codebase" value="*.varylab.com *.math.tu-berlin.de"/>
+        		<attribute name="Application-Name" value="VaryLab"/>
 			</manifest>
 		</jar>
 		<signjar alias="${signAlias}" jar="${jarpath}" keystore="${keystore}" storepass="${signStorepass}"/>
