--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="src-website"/>
 	<classpathentry kind="src" path="src-resource"/>
 	<classpathentry kind="src" path="src-modules"/>
+	<classpathentry kind="src" path="src-tools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar" sourcepath="/jTao"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedge.jar" sourcepath="/halfedge"/>
