--- a/.classpath
+++ b/.classpath
@@ -32,8 +32,6 @@
 	<classpathentry kind="lib" path="lib/jreality/colorpicker.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/janino.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jterm.jar"/>
-	<classpathentry kind="lib" path="lib/jreality/jython_console.jar"/>
-	<classpathentry kind="lib" path="lib/jreality/jython-standalone-2.5.3.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/NetUtil.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/sunflow.jar"/>
 	<classpathentry kind="lib" path="lib/junit/hamcrest-core-1.3.jar"/>
@@ -71,5 +69,7 @@
 	<classpathentry kind="lib" path="lib/itext/itext-pdfa-5.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/itext/itext-xtra-5.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/itext/itextpdf-5.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/jython_console.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/jython-standalone-2.5.4-rc1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
