--- a/.classpath
+++ b/.classpath
@@ -66,10 +66,10 @@
 	<classpathentry kind="lib" path="lib/xstream/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.4.7.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xmlpull-1.1.3.1.jar"/>
-	<classpathentry kind="lib" path="lib/itext/itext-pdfa-5.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/itext/itext-xtra-5.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/itext/itextpdf-5.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jython_console.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jython-standalone-2.7-b3.jar"/>
+	<classpathentry kind="lib" path="lib/itext/itext-pdfa-5.5.5.jar"/>
+	<classpathentry kind="lib" path="lib/itext/itext-xtra-5.5.5.jar"/>
+	<classpathentry kind="lib" path="lib/itext/itextpdf-5.5.5_dgdgitlab.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
