--- a/.classpath
+++ b/.classpath
@@ -68,8 +68,8 @@
 	<classpathentry kind="lib" path="lib/xstream/xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jython_console.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jython-standalone-2.7-b3.jar"/>
-	<classpathentry kind="lib" path="lib/itext/itext-pdfa-5.5.5.jar"/>
-	<classpathentry kind="lib" path="lib/itext/itext-xtra-5.5.5.jar"/>
-	<classpathentry kind="lib" path="lib/itext/itextpdf-5.5.5_dgdgitlab.jar"/>
+	<classpathentry kind="lib" path="lib/itext/itext-pdfa-5.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/itext/itext-xtra-5.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/itext/itextpdf-5.5.6_halfedgetools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
