--- a/build.xml
+++ b/build.xml
@@ -61,9 +61,9 @@
 	</path>
 	
 	<path id="itext.libraryclasspath">
-		<pathelement location="${lib}/itext/itextpdf-5.5.5_dgdgitlab.jar"/>
-		<pathelement location="${lib}/itext/itext-xtra-5.5.5.jar"/>
-		<pathelement location="${lib}/itext/itext-pdfa-5.5.5.jar"/>
+		<pathelement location="${lib}/itext/itextpdf-5.5.6_halfedgetools.jar"/>
+		<pathelement location="${lib}/itext/itext-xtra-5.5.6.jar"/>
+		<pathelement location="${lib}/itext/itext-pdfa-5.5.6.jar"/>
 	</path>
 
 	<path id="jfreechart.libraryclasspath">
